--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -476,7 +476,7 @@ $2.24\times 10^{7}$\hMsun.
   bin.  
   The shaded region presents 10 and 90 per cent spread. 
   The three methods have a similar spread but for clarity we only show
-  the spread for the concentrations estimated using the new method.   
+  the spread for the new method.   
   The dotted line corresponds to fits reported by \citep{Prada2012}.
   The left panel shows the raw results coming from each algorithm. 
   The right panel introduces a correction on the velocity and
@@ -639,10 +639,12 @@ in \cite{Ludlow2016}, Figure 17 in \cite{Klypin2016}) to have robust
 estimates. 
 This means that their results for individual halos should not be
 affected by the bias we report here.
-However, this also leaves open the question about what other methods
+This also leaves open the question about what other methods
 can robustly say about the flattening we report below $10^{12}$\Msun
 using the new method. 
-
+However, there are other results at lower masses and higher redshifts
+\citep[i.e.][]{Prada2012} that should be reconfirmed using higher resolution
+simulations as they use halos with only $500$ particles. 
 
 
 \section{Conclusions}
@@ -694,7 +696,7 @@ this new method.
  and Universidad de Antioquia. 
  We thank Tom\'as Verdugo, Stefan Gottloeber and Nelson  Padilla for
 their feedback.
-We thank the anonymous referee for comments that improved
+We thank the anonymous referees for comments that improved
 the presentation of these results. 
 
 \bibliographystyle{apj}
