--- a/paper/ms_diff.tex
+++ b/paper/ms_diff.tex
@@ -1,7 +1,7 @@
 \documentclass{emulateapj}
 %DIF LATEXDIFF DIFFERENCE FILE
 %DIF DEL ms_old.tex   Thu Aug 25 10:14:23 2016
-%DIF ADD ms.tex       Thu Aug 25 17:34:12 2016
+%DIF ADD ms.tex       Thu Aug 25 18:19:59 2016
 \submitted{{\it Submitted for publication in ApJL}}
 %DIF 3c3
 %DIF < \usepackage{multirow,color,wrapfig,ulem}
@@ -547,7 +547,7 @@ $2.24\times 10^{7}$\hMsun.
   bin.  
   The shaded region presents 10 and 90 per cent spread. 
   The three methods have a similar spread but for clarity we only show
-  the spread for the concentrations estimated using the new method.   
+  the spread for the \DIFdelbeginFL \DIFdelFL{concentrations estimated using the }\DIFdelendFL new method.   
   The dotted line corresponds to fits reported by \citep{Prada2012}.
   The left panel shows the raw results coming from each algorithm. 
   The right panel introduces a correction on the velocity and
@@ -760,10 +760,15 @@ in \mbox{%DIFAUXCMD
 estimates. 
 This means that their results for individual halos should not be
 affected by the bias we report here.
-However, this also leaves open the question about what other methods
+This also leaves open the question about what other methods
 can robustly say about the flattening we report below $10^{12}$}\Msun
-\DIFadd{using the new method}\DIFaddend . 
-
+\DIFadd{using the new method. 
+However, there are other results at lower masses and higher redshifts
+\mbox{%DIFAUXCMD
+\citep[i.e.][]{Prada2012}
+}%DIFAUXCMD
+that should be reconfirmed using higher resolution
+simulations as they use halos with only $500$ particles}\DIFaddend . 
 
 
 \section{Conclusions}
@@ -824,7 +829,7 @@ this new method.
  and }\DIFaddend Universidad de Antioquia\DIFdelbegin \DIFdel{''}\DIFdelend \DIFaddbegin \DIFadd{. 
  We thank Tom\'as Verdugo, Stefan Gottloeber and Nelson  Padilla for
 their feedback.
-We thank the anonymous referee for comments that improved
+We thank the anonymous referees for comments that improved
 the presentation of these results}\DIFaddend . 
 
 \bibliographystyle{apj}
