--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -479,10 +479,8 @@ $2.24\times 10^{7}$\hMsun.
   the spread for the new method.   
   The dotted line corresponds to fits reported by \citep{Prada2012}.
   The left panel shows the raw results coming from each algorithm. 
-  The right panel introduces a correction on the velocity and
-  integrated mass results following the results of the downsampling
-  experiments presented in Figure 
-  \ref{fig:downsampling}.
+  The right panel introduces a correction following the results on the
+  bias as a function of particle number.
   \label{fig:concentration}} 
 \end{figure*}
 
