--- a/paper/ms_diff.tex
+++ b/paper/ms_diff.tex
@@ -1,7 +1,7 @@
 \documentclass{emulateapj}
 %DIF LATEXDIFF DIFFERENCE FILE
 %DIF DEL ms_old.tex   Thu Aug 25 10:14:23 2016
-%DIF ADD ms.tex       Thu Aug 25 18:19:59 2016
+%DIF ADD ms.tex       Thu Aug 25 18:22:47 2016
 \submitted{{\it Submitted for publication in ApJL}}
 %DIF 3c3
 %DIF < \usepackage{multirow,color,wrapfig,ulem}
@@ -550,10 +550,11 @@ $2.24\times 10^{7}$\hMsun.
   the spread for the \DIFdelbeginFL \DIFdelFL{concentrations estimated using the }\DIFdelendFL new method.   
   The dotted line corresponds to fits reported by \citep{Prada2012}.
   The left panel shows the raw results coming from each algorithm. 
-  The right panel introduces a correction on the velocity and
-  integrated mass results following the results of the downsampling
+  The right panel introduces a correction \DIFdelbeginFL \DIFdelFL{on the velocity and
+  integrated mass results }\DIFdelendFL following the results \DIFdelbeginFL \DIFdelFL{of }\DIFdelendFL \DIFaddbeginFL \DIFaddFL{on }\DIFaddendFL the
+  \DIFdelbeginFL \DIFdelFL{downsampling
   experiments presented in Figure 
-  \ref{fig:downsampling}.
+  \ref{fig:downsampling}}\DIFdelendFL \DIFaddbeginFL \DIFaddFL{bias as a function of particle number}\DIFaddendFL .
   \label{fig:concentration}} 
 \end{figure*}
 
