--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -500,6 +500,13 @@ We find that the resulting p-value distribution is flat.
 This confirms that the radial particle distribution in the bootraped
 halo is consistent with coming from the distribution given by the
 parent halo.  
+Why not using different simulations with the same initial conditions
+and lower resolutions \citep[i.e.][]{2008MNRAS.391.1685S}?. 
+Because we want to be sure that we are only measuring the bias of a
+given method as a function of particle number for statistically
+identical halos, and not a possible simulation artifact that changes
+the halo structure. 
+
 
 For every subsample we keep fixed the virial radius and the center
 found for the high resolution halo.
@@ -534,12 +541,10 @@ by a factor $14\%$ while the density method overestimates it by $20\%$.
 Around the same sampling scale, the new algorithm shows a more stable
 behaviour underestimating the concentration only by a factor of
 $1\%$-$3\%$.
-Work  that studied the effect of
-lowering numerical resolution on the same individual halos
-\citep{2008MNRAS.391.1685S} yielded similar values for the
-concentration across resolutions.  That work  explored a particle
-number range $>5\times 10^5$, completely consistent with our result that the
-bias can only be evident for particle numbers $<4\times 10^3$. 
+
+
+
+
 
 
 The thin lines on the same panel show a fit to the function 
