--- a/paper/ms_diff.tex
+++ b/paper/ms_diff.tex
@@ -1,7 +1,7 @@
 \documentclass{emulateapj}
 %DIF LATEXDIFF DIFFERENCE FILE
 %DIF DEL ms_old.tex   Thu Aug 25 10:14:23 2016
-%DIF ADD ms.tex       Thu Aug 25 18:22:47 2016
+%DIF ADD ms.tex       Thu Sep  1 09:50:58 2016
 \submitted{{\it Submitted for publication in ApJL}}
 %DIF 3c3
 %DIF < \usepackage{multirow,color,wrapfig,ulem}
@@ -576,7 +576,17 @@ We find that the resulting p-value distribution is flat.
 This confirms that the radial particle distribution in the bootraped
 halo is consistent with coming from the distribution given by the
 parent halo.  
+Why not using different simulations with the same initial conditions
+and lower resolutions \mbox{%DIFAUXCMD
+\citep[i.e.][]{2008MNRAS.391.1685S}
+}%DIFAUXCMD
+?. 
+Because we want to be sure that we are only measuring the bias of a
+given method as a function of particle number for statistically
+identical halos, and not a possible simulation artifact that changes
+the halo structure. 
 }
+
 
 \DIFadd{For every subsample }\DIFaddend we keep fixed the virial radius and the center
 found for the high resolution halo.
@@ -614,16 +624,11 @@ by a factor $14\%$ while the density method overestimates it by $20\%$.
 Around the same sampling scale, the new algorithm shows a more stable
 behaviour underestimating the concentration only by a factor of
 $1\%$-$3\%$\DIFaddbegin \DIFadd{.
-Work  that studied the effect of
-lowering numerical resolution on the same individual halos
-\mbox{%DIFAUXCMD
-\citep{2008MNRAS.391.1685S}
-}%DIFAUXCMD
-yielded similar values for the
-concentration across resolutions.  That work  explored a particle
-number range $>5\times 10^5$, completely consistent with our result that the
-bias can only be evident for particle numbers $<4\times 10^3$. 
 }\DIFaddend 
+
+
+
+
 
 
 The thin \DIFdelbegin \DIFdel{continous }\DIFdelend lines on the same panel \DIFdelbegin \DIFdel{shows }\DIFdelend \DIFaddbegin \DIFadd{show }\DIFaddend a fit to the \DIFdelbegin \DIFdel{data
